# samara-main

./: .gitignore  .mcp.example.json  .mcp.json  AGENTS.md  CLAUDE.md  ORGANISM_SETUP_GUIDE.md  SESSION_HANDOFF.md  birth.sh  bootstrap.sh  config.example.json  evolution.md  package-lock.json  readme.md  samara.md  setup.md
.claude/: settings.json  settings.local.json  skills-manifest.json
Samara/: .gitignore  ExportOptions.plist
cli/: package.json
create-samara/: README.md  package-lock.json  package.json
docs/: INDEX.md  architecture-drift.md  contiguous-memory-postmortem.md  contiguous-memory-system.md  contiguous-memory-to-notes-summary.md  development-patterns.md  dynamic-voice-system.md  external-systems-analysis.md  heartbeat-design.md  memory-systems.md  postmortem-2026-01-24-repo-audit.md  proactive-messaging.md  scratchpad-notes-issue-report.md  scripts-reference.md  services-reference.md  setup-guide.md  skills-reference.md  smart-context-retrieval-plan.md  smart-context-retrieval-rollout.md  sync-guide.md  troubleshooting.md  whats-changed-phases-1-4.md  whats-changed-phases-5-8.md  xcode-build-guide.md
instructions/: imessage-group.md  imessage.md  privacy-guardrails.md
lib/: README.md  archive_index_cli.py  calendar_analyzer.py  chroma_helper.py  config.sh  hot_digest_builder.py  location_analyzer.py  mind_paths.py  pattern_analyzer.py  privacy_filter.py  question_synthesizer.py  roundup_aggregator.py  stream_audit.py  stream_cli.py  (+9 more)
services/mcp-memory-bridge/: README.md  com.claude.memory-bridge.plist.template  pyproject.toml  server.py
(+401 files in other folders)
